--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.8.0",
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
+    "jszip": "^3.10.1",
     "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
