--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0"
   },
