--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/dropzone": "^7.11.1",
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
+    "@mantine/spotlight": "^7.11.1",
     "@tabler/icons-react": "^3.8.0",
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
