--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@tabler/icons-react": "^3.8.0",
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
+    "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0"
   },
