--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jimp": "^0.22.12",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
+    "pdfjs-dist": "^4.4.168",
     "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
