--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
     "jspdf": "^2.5.1",
+    "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
     "pdfjs-dist": "^4.4.168",
     "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.7",
     "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
