--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.15",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
