--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devbookhq/splitter": "^1.4.2",
     "@mantine/carousel": "^7.11.1",
+    "@mantine/code-highlight": "^7.15.2",
     "@mantine/core": "^7.11.1",
     "@mantine/dropzone": "^7.11.1",
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
     "@mantine/spotlight": "^7.11.1",
     "@tabler/icons-react": "^3.8.0",
+    "dirty-json": "^0.9.2",
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
+    "json-to-ts": "^2.1.0",
     "jspdf": "^2.5.1",
     "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
