--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dirty-json": "^0.9.2",
     "embla-carousel-react": "^7.1.0",
     "jimp": "^0.22.12",
+    "jscanify": "1.3.0",
     "json-to-ts": "^2.1.0",
     "jspdf": "^2.5.1",
     "jsqr": "^1.4.0",
